update metric handling in hyperparameter tuning notebooks

--- a/HyperParameter tuning Python /hyperparamter-tuning-bert-large.ipynb
+++ b/HyperParameter tuning Python /hyperparamter-tuning-bert-large.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "03696917",
    "metadata": {
     "execution": {
@@ -2235,6 +2235,9 @@
     "    preds = (probs > 0.5).astype(int)  # Threshold for multi-label classification\n",
     "    # Compute metrics\n",
     "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"micro\")\n",
+    "    if f1 == 0:\n",
+    "        print(\"F1 score is zero. Resetting the trial.\")\n",
+    "        raise optuna.exceptions.TrialPruned()  # Prune the trial to reset it\n",
     "    return {\"precision\": precision, \"recall\": recall, \"f1\": f1}\n",
     "    \n",
     "def optuna_objective(trial):\n",
@@ -2778,11 +2781,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_90107141072c4341a3eb32f905b8f95e",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d93072aef1724eb293fc59b0b5bf841e",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "395ce3d26f084e76b751edbee51fef2b": {
@@ -3615,11 +3618,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_e8976595ec80495c9b8df550900be5ad",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_6ff389729ff94e5494b6cfdacf362e1f",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "7d37ec1b08bf42068690e4d8923a732b": {
@@ -3639,11 +3642,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8a9380ebe4d24168a5674b13c564814c",
-       "max": 48.0,
-       "min": 0.0,
+       "max": 48,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_536c454a49d4426aa207eda1f7b204c9",
-       "value": 48.0
+       "value": 48
       }
      },
      "80c234e428af424dba9a727bc540b935": {
@@ -4280,11 +4283,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_04313dbe2cf3471a9a8d7c5798f57f36",
-       "max": 1344951957.0,
-       "min": 0.0,
+       "max": 1344951957,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_cb366acf3c094dce88fdbd2e93dec8a1",
-       "value": 1344951957.0
+       "value": 1344951957
       }
      },
      "aa85029be84d4dfd8a147351915c15d0": {
@@ -4551,11 +4554,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_4217d78dc38f483fa50b09b0c70326bb",
-       "max": 571.0,
-       "min": 0.0,
+       "max": 571,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_ad1f56d471b54886afc642c957ec01a7",
-       "value": 571.0
+       "value": 571
       }
      },
      "befe3dd5714549b1bc3dbbe419260ea6": {
@@ -4642,11 +4645,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a1fe0c91465b4905a18782946d32f993",
-       "max": 466062.0,
-       "min": 0.0,
+       "max": 466062,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_3b7b159003c14a45811252f97b62902b",
-       "value": 466062.0
+       "value": 466062
       }
      },
      "ca9122f4b02343f1ad9679ed18103efe": {
@@ -5120,11 +5123,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_6accb5a96a4b49db95d649431b3252d7",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_1f7921cd602a4776aa89c8a415e94b3c",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "ead61948c9384a3788d9d3c0aca6efcb": {
@@ -5240,11 +5243,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_ca9122f4b02343f1ad9679ed18103efe",
-       "max": 231508.0,
-       "min": 0.0,
+       "max": 231508,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e775e1677e5b4cb8b92ebc4fa508f4a7",
-       "value": 231508.0
+       "value": 231508
       }
      },
      "f47af15e1e5940bb839c1dbb50a69586": {
@@ -5316,11 +5319,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_5c121de7d9304602a7e37acfeed3457e",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_755cec534d544d82b8d40b7287f44791",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "ff569ae9731741ccb9a6090691afae9e": {
