--- a/HyperParameter tuning Python /hyperparamter-tuning-codebert-base.ipynb
+++ b/HyperParameter tuning Python /hyperparamter-tuning-codebert-base.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a8e3d4fe",
    "metadata": {
     "execution": {
@@ -5385,6 +5385,9 @@
     "    preds = (probs > 0.5).astype(int)  # Threshold for multi-label classification\n",
     "    # Compute metrics\n",
     "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"micro\")\n",
+    "    if f1 == 0:\n",
+    "        print(\"F1 score is zero. Resetting the trial.\")\n",
+    "        raise optuna.exceptions.TrialPruned()  # Prune the trial to reset it\n",
     "    return {\"precision\": precision, \"recall\": recall, \"f1\": f1}\n",
     "    \n",
     "def optuna_objective(trial):\n",
@@ -5516,11 +5519,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2155d68f83264202ab8860e6cc6ad9e9",
-       "max": 25.0,
-       "min": 0.0,
+       "max": 25,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_866764ad0e054c21a071ba6c169ee4be",
-       "value": 25.0
+       "value": 25
       }
      },
      "05945c8f9460484899dda9371c183505": {
@@ -5748,11 +5751,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_aeb09eb4d1fb428a804cc8895ade0b18",
-       "max": 898822.0,
-       "min": 0.0,
+       "max": 898822,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8e170a3726a84978ae6ae4fefeb0c56e",
-       "value": 898822.0
+       "value": 898822
       }
      },
      "0d1343e988fa4a568bc1b8416ddc97dd": {
@@ -6339,11 +6342,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_98d7b20583284d8c8003291e620ca3ae",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_3ecbd53e37814795a386c35bf1445084",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "36a0d6bc51b54a05a4b958ec3f3e17ac": {
@@ -6436,11 +6439,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8a23f6a02e65406aa7cf7d0c280d3070",
-       "max": 150.0,
-       "min": 0.0,
+       "max": 150,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_c2d7359bc4ba4d64adfd6070a71fe69d",
-       "value": 150.0
+       "value": 150
       }
      },
      "3ecbd53e37814795a386c35bf1445084": {
@@ -6772,11 +6775,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_9d8440aa86ac4631a6ccf62a8a80e838",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_7738a222f3614533ab7372f139dde97d",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "58808e9447a447c5b7178714dfda5af0": {
@@ -6916,11 +6919,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a62d661857e643c0803917ed1c253419",
-       "max": 456318.0,
-       "min": 0.0,
+       "max": 456318,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_3a9c5dbf20034d7583df1a42e23ae6db",
-       "value": 456318.0
+       "value": 456318
       }
      },
      "63591b3d536847b1bbbb24189b9f2f7d": {
@@ -7579,11 +7582,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_0762eb5862424226a8f75f7b2ee7e38f",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_95b996702fe548b5bdde6fce0e6d30d5",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "9d8440aa86ac4631a6ccf62a8a80e838": {
@@ -7655,11 +7658,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_05945c8f9460484899dda9371c183505",
-       "max": 498.0,
-       "min": 0.0,
+       "max": 498,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_fa79640d4f824c87be0bc6ed37d77973",
-       "value": 498.0
+       "value": 498
       }
      },
      "a37536304f4f4ce881237756e85479ee": {
@@ -8188,11 +8191,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_c7af324d42f346f4852942cc66340061",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_58808e9447a447c5b7178714dfda5af0",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "bac8e05772e74a53a094be160351420d": {
@@ -8521,11 +8524,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b5f4ec9fa5b74bae8334e5ed64ca0dd8",
-       "max": 498627950.0,
-       "min": 0.0,
+       "max": 498627950,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4ddb81adad6a41569ea5c0dc7964618f",
-       "value": 498627950.0
+       "value": 498627950
       }
      },
      "d1a91ff4183e4ee6bf15d75aa136d50c": {
