--- a/HyperParameter tuning Python /hyperparamter-tuning-distilbert.ipynb
+++ b/HyperParameter tuning Python /hyperparamter-tuning-distilbert.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "940e7696",
    "metadata": {
     "execution": {
@@ -5371,6 +5371,9 @@
     "    preds = (probs > 0.5).astype(int)  # Threshold for multi-label classification\n",
     "    # Compute metrics\n",
     "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"micro\")\n",
+    "    if f1 == 0:\n",
+    "        print(\"F1 score is zero. Resetting the trial.\")\n",
+    "        raise optuna.exceptions.TrialPruned()  # Prune the trial to reset it\n",
     "    return {\"precision\": precision, \"recall\": recall, \"f1\": f1}\n",
     "    \n",
     "def optuna_objective(trial):\n",
@@ -5822,11 +5825,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b88d965eebd84d95940b4e3a9947a965",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_dd297246c09a470f8cf8fcc9553fdfee",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "1b98453259b4428d8a541c4f77c23a78": {
@@ -5846,11 +5849,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2f223085e0264e7d8f07c46955c6df55",
-       "max": 466062.0,
-       "min": 0.0,
+       "max": 466062,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d4fe168bedc145d59cad8f26d45e7bb0",
-       "value": 466062.0
+       "value": 466062
       }
      },
      "1caf06bdaeaf4cfea6686866f73dccff": {
@@ -6062,11 +6065,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_d1b88fafeddc4746a6aaa6ef52bed38a",
-       "max": 48.0,
-       "min": 0.0,
+       "max": 48,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4491c3bb1d67451ea0086735015d9944",
-       "value": 48.0
+       "value": 48
       }
      },
      "2c94f213871b4a918a70d9a3983f7aa7": {
@@ -7019,11 +7022,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b367c8a863f04cd1af17f25c928b8924",
-       "max": 231508.0,
-       "min": 0.0,
+       "max": 231508,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e29cd26df38648488e97473eec4b4823",
-       "value": 231508.0
+       "value": 231508
       }
      },
      "815bb3e4e16549eb9aff26c6aeea6cc9": {
@@ -7295,11 +7298,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1caf06bdaeaf4cfea6686866f73dccff",
-       "max": 483.0,
-       "min": 0.0,
+       "max": 483,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_aa636155240b49d3b55d10cd11632f04",
-       "value": 483.0
+       "value": 483
       }
      },
      "99294b27b2e14aa097a636c9334356c7": {
@@ -7926,11 +7929,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_e792ab4dc5c24f168db182d69a154ebb",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_b798f0d5eb564a43b790b5a2428f87ba",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "d4fe168bedc145d59cad8f26d45e7bb0": {
@@ -8033,11 +8036,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a752cdb74c0c4dc18f38343e527781b9",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_9ebd594daec742b9a6dad11d6b47a89a",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "da260b5f0c40412e8f4a8023a2a62441": {
@@ -8078,11 +8081,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_9f48138992fb45238e806c6a60d1ea9a",
-       "max": 267954768.0,
-       "min": 0.0,
+       "max": 267954768,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_bf53e5b9545e47f3844995633436d86b",
-       "value": 267954768.0
+       "value": 267954768
       }
      },
      "dc73d3e89554441fa623ba298921a4dc": {
@@ -8489,11 +8492,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_abae133e6c6c42dab55013fd14182947",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8ba521e8ef824166a2e9aafdad1fc3cf",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "fdad0e2ea5494bc0aaa28c32b124d8cd": {
