--- a/HyperParameter tuning Python /hyperparamter-tuning-xlnet-base-cased.ipynb
+++ b/HyperParameter tuning Python /hyperparamter-tuning-xlnet-base-cased.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "05f9e65d",
    "metadata": {
     "execution": {
@@ -3853,6 +3853,9 @@
     "    preds = (probs > 0.5).astype(int)  # Threshold for multi-label classification\n",
     "    # Compute metrics\n",
     "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"micro\")\n",
+    "    if f1 == 0:\n",
+    "        print(\"F1 score is zero. Resetting the trial.\")\n",
+    "        raise optuna.exceptions.TrialPruned()  # Prune the trial to reset it\n",
     "    return {\"precision\": precision, \"recall\": recall, \"f1\": f1}\n",
     "    \n",
     "def optuna_objective(trial):\n",
@@ -4462,11 +4465,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b1e63e8a5c6f4158ab1371e4f0477aa6",
-       "max": 1382015.0,
-       "min": 0.0,
+       "max": 1382015,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_a81d26ea57c24afc866d885197fb7c66",
-       "value": 1382015.0
+       "value": 1382015
       }
      },
      "365d96689d6e4a49a6bf7f9c63eb39bf": {
@@ -4486,11 +4489,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_40efdb983f474b9ea04576d18b4dee26",
-       "max": 760.0,
-       "min": 0.0,
+       "max": 760,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e90e35ff62594d1687845803e8f96510",
-       "value": 760.0
+       "value": 760
       }
      },
      "3a865e6dc8c2478db19f0656293d9efb": {
@@ -4851,11 +4854,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a8fcbb94e09c4f5cb81fa6b2120c7b23",
-       "max": 798011.0,
-       "min": 0.0,
+       "max": 798011,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_863e985b7b7e42b19629b59eb9edbd4e",
-       "value": 798011.0
+       "value": 798011
       }
      },
      "5a0181f0c8b9457ca9938d0671ca47d6": {
@@ -5104,11 +5107,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1dfd825c933f464f80f75f3be7e7f9e0",
-       "max": 467042463.0,
-       "min": 0.0,
+       "max": 467042463,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_ca7d4c77799b46ce81f570efe95ebff6",
-       "value": 467042463.0
+       "value": 467042463
       }
      },
      "810c01b7bcc54c33b0bff36206fca421": {
@@ -6114,11 +6117,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8db193622d9f4737a5c1e82326a8d4ae",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_03b2b394e2b84f63a436de2c1452bf5f",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "d98c32f367ed403f8c204681605d34f0": {
@@ -6315,11 +6318,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b672751ef87248e49c15ec3aea3512d4",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d4f64d028b244b1aa46479011456c4f2",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "e90e35ff62594d1687845803e8f96510": {
@@ -6376,11 +6379,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_784b0bea784d45a7baf0b677ebdf2cd2",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f77f5c0fad4f4fbd9f39e267f3b8e10e",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "f28beea344d6473da93543404424cdb8": {
@@ -6556,11 +6559,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_fdff0934a41940399dd49f385b5223d5",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_402b101b3bae418c9dd9bb793c1bceab",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "fa7eac8491f3404d88cb8ddb9887c139": {
