--- a/HyperParameter tuning Python /hyperparamter-tuning-xlnet-large.ipynb
+++ b/HyperParameter tuning Python /hyperparamter-tuning-xlnet-large.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ac3e7a20",
    "metadata": {
     "execution": {
@@ -2094,6 +2094,9 @@
     "    preds = (probs > 0.5).astype(int)  # Threshold for multi-label classification\n",
     "    # Compute metrics\n",
     "    precision, recall, f1, _ = precision_recall_fscore_support(labels, preds, average=\"micro\")\n",
+    "    if f1 == 0:\n",
+    "        print(\"F1 score is zero. Resetting the trial.\")\n",
+    "        raise optuna.exceptions.TrialPruned()  # Prune the trial to reset it\n",
     "    return {\"precision\": precision, \"recall\": recall, \"f1\": f1}\n",
     "    \n",
     "def optuna_objective(trial):\n",
@@ -2380,11 +2383,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_94baa83de5ab4df9aee8152ac5bfb49e",
-       "max": 1441285815.0,
-       "min": 0.0,
+       "max": 1441285815,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_7c6bdb14061b4b20b1d30057c401713c",
-       "value": 1441285815.0
+       "value": 1441285815
       }
      },
      "1655660bf5f949079848807c2ae4c7ce": {
@@ -3054,11 +3057,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_9a52444df7a7426c90a45e7d19737d72",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_6ae876eed08d4390aba0b5409df785fa",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "5bac741bf2044307b4de1eec6637a900": {
@@ -3271,11 +3274,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_edae6b3eba434bcfb72cb7b48f31b1b3",
-       "max": 761.0,
-       "min": 0.0,
+       "max": 761,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4f3c44fef1cd495998528cc12426e6cb",
-       "value": 761.0
+       "value": 761
       }
      },
      "6ebb0aebd28f4da1a0ca7e972e753677": {
@@ -3790,11 +3793,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_42c7104626424ad4b4f849f114f87f4a",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0af6dc1b6944425cb795ac318bc2baf9",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "a784702edb1b496e8cbbe8bee0a491ba": {
@@ -3991,11 +3994,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_27c759a9c58b41b285521b761442ca90",
-       "max": 1382015.0,
-       "min": 0.0,
+       "max": 1382015,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d6eda4d88cd0463290fb754cff25814f",
-       "value": 1382015.0
+       "value": 1382015
       }
      },
      "b44f304dcb764b339ad5e9631ec0bbaa": {
@@ -4088,11 +4091,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b44f304dcb764b339ad5e9631ec0bbaa",
-       "max": 798011.0,
-       "min": 0.0,
+       "max": 798011,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_bc4cdca766ca40acaffddf21b7fd0353",
-       "value": 798011.0
+       "value": 798011
       }
      },
      "ba7a5694965441078591400d386df1b2": {
@@ -4216,11 +4219,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_81cbc0d7eb264d79b63e28a50d325f45",
-       "max": 3355.0,
-       "min": 0.0,
+       "max": 3355,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f07afd930dbd458c86d76710e96048ef",
-       "value": 3355.0
+       "value": 3355
       }
      },
      "c49a11f1e8304637a7dff4ed75b3023b": {
@@ -4292,11 +4295,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_3c834b531bce42e1b82509248fcbc2e2",
-       "max": 13419.0,
-       "min": 0.0,
+       "max": 13419,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_1655660bf5f949079848807c2ae4c7ce",
-       "value": 13419.0
+       "value": 13419
       }
      },
      "c6d3882ba9534faeb8b98c5e72fb6333": {
