--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -216,9 +216,11 @@
         "max_avg_flops = 5000\n",
         "max_avg_runtime = 5\n",
         "def score(avg_f1, avg_runtime, avg_flops):\n",
-        "    return (0.6 * avg_f1 +\n",
-        "      0.2 * ((max_avg_runtime - avg_runtime) / max_avg_runtime) +\n",
-        "      0.2 * ((max_avg_flops - avg_flops) / max_avg_flops))\n",
+        "    return (\n",
+        "        0.6 * avg_f1 +\n",
+        "        0.2 * max(0, ((max_avg_runtime - avg_runtime) / max_avg_runtime)) +\n",
+        "        0.2 * max(0, ((max_avg_flops - avg_flops) / max_avg_flops))\n",
+        "    )\n",
         "print(round(score(avg_f1, average_time, average_GFLOPS), 2))"
       ]
     }
